      filter_mset_cong
      filter_mset_cong0
      image_mset_eq_image_mset_plusD
      image_mset_eq_plusD
      image_mset_eq_plus_image_msetD
      image_mset_filter_mset_swap
      monotone_multp_multp_image_mset
      monotone_on_multp_multp_image_mset
      multp_image_mset_image_msetD

* Theory "HOL-Library.Sublist":
  - Added lemma map_mono_strict_suffix.

* Sledgehammer:
  - Redesigned multithreading to provide more fine grained prover schedules.
    The binary option 'slice' has been replaced by a numeric value 'slices'
    indicating the number of desired slices. Stronger provers can now be run by
    more than one thread simultaneously. The new option 'max_proofs' controls
    the number of proofs shown. INCOMPATIBILITY.
  - Introduced sledgehammer_outcome data type and changed return type of ML
    function Sledgehammer.run_sledgehammer from "bool * (string * string list)"
    to "bool * (sledgehammer_outcome * string)". The former value can be
    recomputed with "apsnd (ATP_Util.map_prod
    Sledgehammer.short_string_of_sledgehammer_outcome single)".
    INCOMPATIBILITY.
  - Added support for TX0 and TX1 TPTP formats and $ite/$let expressions
    in TH0 and TH1.
  - Replaced option "sledgehammer_atp_dest_dir" by
    "sledgehammer_atp_problem_dest_dir", for problem files, and
    "sledgehammer_atp_proof_dest_dir", for proof files. Minor INCOMPATIBILITY.
  - Removed support for experimental prover 'z3_tptp'.
  - The fastest successfully preplayed proof is always suggested.
  - All SMT solvers but Z3 now resort to suggest (smt (verit)) when no proof
    could be preplayed.
  - Added new "some_preplayed" value to "expect" option to specify that some
    successfully preplayed proof is expected. This is in contrast to the "some"
    value which doesn't specify whether preplay succeeds or not.

* Mirabelle:
  - Replaced sledgehammer option "keep" by
    "keep_probs", for problems files, and
    "keep_proofs" for proof files. Minor INCOMPATIBILITY.